--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -68,6 +68,8 @@ library(stringr)
 # dir_data <- file.path(dir_N, 'git-annex/globalprep/_raw_data')
 # dir_fig  <- file.path(getwd(), 'figures')
 
+if(basename(getwd()) != 'IUCN-AquaMaps') setwd('~/github/IUCN-AquaMaps')
+
 
 ```
 
@@ -77,13 +79,13 @@ library(stringr)
 
 data_file <- 'data/spp_list_w_area_trimmed.csv'
 spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
-  filter(!is.na(popn_category)) %>% ### filter out unassessed species
+#  filter(!is.na(popn_category)) %>% ### filter out unassessed species
   filter(!is.na(sm_perc))           ### filter out NA maps (usually IUCN maps with no polygons)
 
 ### generate other lists
 
 spp_all_file <- 'data/spp_all.csv'
-spp_all <- read.csv(spp_all_file, stringsAsFactors = FALSE) 
+spp_all <- read.csv(spp_all_file, stringsAsFactors = FALSE)
 
 iucn_marine_file <- 'data/spp_iucn_marine.csv'
 spp_iucn_marine <- read.csv(iucn_marine_file, stringsAsFactors = FALSE) 
